--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,78 @@
   <version>1.0-SNAPSHOT</version>
   <name>stoma Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+
+    <properties>
+        <org.springframework.version>3.2.3.RELEASE</org.springframework.version>
+        <org.springdatajpa.version>1.3.4.RELEASE</org.springdatajpa.version>
+        <mysql.version>5.1.6</mysql.version>
+        <hibernate.version>4.2.3.Final</hibernate.version>
+        <javax.transaction.version>1.1</javax.transaction.version>
+        <joda.version>2.2</joda.version>
+        <junit.version>4.11</junit.version>
+    </properties>
+
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+
+      <!-- Spring -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>${org.springframework.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-orm</artifactId>
+          <version>${org.springframework.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>${org.springframework.version}</version>
+      </dependency>
+
+      <!-- Transaction -->
+      <dependency>
+          <groupId>javax.transaction</groupId>
+          <artifactId>jta</artifactId>
+          <version>${javax.transaction.version}</version>
+      </dependency>
+
+      <!-- Hibernate -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>${hibernate.version}</version>
+      </dependency>
+
+      <!-- MySql -->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.version}</version>
+      </dependency>
+
+      <!-- JodaTime -->
+      <dependency>
+          <groupId>joda-time</groupId>
+          <artifactId>joda-time</artifactId>
+          <version>${joda.version}</version>
+      </dependency>
+
+      <!-- JUnit -->
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>${junit.version}</version>
+          <scope>test</scope>
+      </dependency>
+
   </dependencies>
+
+
   <build>
     <finalName>stoma</finalName>
   </build>
+
 </project>
