--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -2,9 +2,9 @@ database.driverClassName=com.mysql.jdbc.Driver
 database.databaseurl=jdbc:mysql://localhost:3306/licenta
 database.username=root
 database.password=root
-email.receiver.address=bogdanmatra@gmail.com
-email.receiver.name=Bogdan Matragociu
+email.receiver.address=mail.stoma.app@gmail.com
+email.receiver.name=App mail service
 email.sender.host=smtp.gmail.com
 email.sender.port=587
-email.sender.username=bogdanmatra@gmail.com
-email.sender.password=lookatmeNow
+email.sender.username=mail.stoma.app@gmail.com
+email.sender.password=Password12#
