--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,4 +74,80 @@
     </servlet-mapping>
 
 
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>400</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>405</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>406</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>407</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>412</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>413</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>414</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>415</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>416</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>417</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>423</error-code>
+        <location>/error</location>
+    </error-page>
+
+
 </web-app>
