--- a/src/main/filters/openshift.properties
+++ b/src/main/filters/openshift.properties
@@ -1,7 +1,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
 database.databaseurl=jdbc:mysql://$OPENSHIFT_MYSQL_DB_HOST:$OPENSHIFT_MYSQL_DB_PORT/licenta
-database.username=adminBiKVACf
-database.password=7_E7KltiKKAw
+database.username=adminGYfDgk3
+database.password=E3B-2yAQRQnm
 email.receiver.address=mail.stoma.app@gmail.com
 email.receiver.name=App mail service
 email.sender.host=smtp.gmail.com
