Database url fix

--- a/src/main/filters/openshift.properties
+++ b/src/main/filters/openshift.properties
@@ -1,5 +1,5 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.databaseurl=jdbc:mysql://$OPENSHIFT_MYSQL_DB_HOST:$OPENSHIFT_MYSQL_DB_PORT/licenta
+database.databaseurl=jdbc:mysql://127.12.209.130:3306/licenta
 database.username=adminGYfDgk3
 database.password=E3B-2yAQRQnm
 email.receiver.address=mail.stoma.app@gmail.com
