--- a/src/main/filters/azure.properties
+++ b/src/main/filters/azure.properties
@@ -1,7 +1,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.databaseurl=jdbc:mysql://127.9.252.2:3306/licenta
-database.username=adminurTAzkZ
-database.password=rTd_-gAybcML
+database.databaseurl=jdbc:mysql://localhost:3306/licenta
+database.username=root
+database.password=root
 email.receiver.address=mail.stoma.app@gmail.com
 email.receiver.name=App mail service
 email.sender.host=smtp.gmail.com
