--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <tomcat.maven.version>1.1</tomcat.maven.version>
         <maven.compiler.version>2.3.2</maven.compiler.version>
         <spring.context.version>3.1.2.RELEASE</spring.context.version>
+        <jsoup.version>1.8.1</jsoup.version>
 
     </properties>
 
@@ -296,6 +297,12 @@
             <artifactId>spring-context-support</artifactId>
             <version>${spring.context.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+
 
     </dependencies>
 
