--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -1,7 +1,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.databaseurl=jdbc:mysql://mariadb-medify.elasticloud.star-vault.ro/licenta
-database.username=licenta
-database.password=GVYSWKyqqFRGW47s
+database.databaseurl=jdbc:mysql://localhost:3306/licenta
+database.username=root
+database.password=bmatragociu
 email.receiver.address=mail.stoma.app@gmail.com
 email.receiver.name=App mail service
 email.sender.host=smtp.gmail.com
